--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   get: ^4.6.5
   hexcolor: ^2.0.7
   flutter_svg: ^1.1.1+1
+  flutter_tindercard: ^0.2.0
   firebase_core:
   cloud_firestore:
   flutter_auth_buttons: ^0.10.0
   google_sign_in: ^5.4.0
-  firebase_auth: ^3.6.1 
+  firebase_auth: ^3.6.1
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/img/girls/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
